--- a/users/templates/signup2.html
+++ b/users/templates/signup2.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
        
-        <title>Pet dada signup finish</title>
+        <title>EAT VILLAGE signup finish</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
@@ -19,19 +19,19 @@
          <div class="account-login">
             
             <form method="post" class="login-form" action="{% url 'users:login' %}">
-               <h1><center>Pet dada</h1>
+               <h1><center>EAT VILLAGE</h1>
                
                <br> <br>
                <div style="color: #57422D;"
 
-               <h1><font size = '5.5'><center>Welcome! PET DADA!<br> Plese check your Email.<br> Thank you!
+               <h1><font size = '5.5'><center>Welcome! EAT VILLAGE!<br> Plese check your Email.<br> Thank you!
                   
                <div class="form-group">
                </div>
                </div>
                <div class="form-group">
                
-               <h2><p> <cneter> <font size = '5'>  <a href="/users/login/">PET DADA login </a></p></h2>
+               <h2><p> <cneter> <font size = '5'>  <a href="/users/login/">EAT VILLAGE login </a></p></h2>
                </div>
 
 
