--- a/users/templates/home.html
+++ b/users/templates/home.html
@@ -9,7 +9,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
         
         {% load static %}
-        <link rel="stylesheet" href="{% static "style3.css" %}">
+        <link rel="stylesheet" href="{% static 'style3.css' %}">
 
 </head>
 <body>
@@ -27,14 +27,7 @@
                <div class="form-group">
                </div>
                </div>
-               <div class="form-group">
-               
-               <h2><p> <cneter> <font size = '5'>  <a href="/users/login/">Login page</a></p></h2>
-               </div>
 
-
-                  
-               </div>
                
                
              
