--- a/mainpage/templates/mainpage/recipe_recom.html
+++ b/mainpage/templates/mainpage/recipe_recom.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/312926fc77.js" crossorigin="anonymous"></script>
-    <title>Weather Recommendation Page</title>
+    <title>Ingredients Recommendation Page</title>
 </head>
 <body>
     <nav class="navbar">
@@ -38,7 +38,7 @@
     </nav>
 
     <div class="content-title">
-        <h3>날씨 추천 레시피</h3>
+        <h3>재료 추천 레시피</h3>
     </div>
     <div class="recomm_list">
         <ul class="recipe_list">
