--- a/mainpage/templates/mainpage/ingredients_change.html
+++ b/mainpage/templates/mainpage/ingredients_change.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" href="/custom_icon.png"/>
     <script src="https://kit.fontawesome.com/312926fc77.js" crossorigin="anonymous"></script>
-    <title>Main Page</title>
+    <title>Ingredient Change Page</title>
 </head>
 <body>
     <nav class="navbar">
@@ -38,14 +38,9 @@
             <i class="fas fa-bars"></i>
         </a>
     </nav>
-    <div id="container">
-        <video autoplay="true" id="videoElement">
-        </video>
-        <div id="button">
-            <button id="btn1" onclick="cameraAccess();">영상 촬영</button>
-            <button id="btn2" onclick="find_ingred();">분석 시작</button>
-        </div>
-    </div>
+
+    <
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="{% static 'main.js' %}"></script>
     <script>
@@ -73,13 +68,6 @@
             if (food_cate.length == 0) { return false;}
             location.href = "{% url 'mainpage:search' %}";
         }
-
-        /* 재료 분석 후 레시피 추천 */
-        function find_ingred() {
-            location.href = "{% url 'mainpage:ingredient_result' %}";
-        }
     </script>
 </body>
-
-
 </html>
