--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -24,7 +24,7 @@
 
     
 <body>
-    
+    {% include "layout.html" %} 
      <div class="signup"> 
         <div class="login-form">
             <form method="POST" >
@@ -71,6 +71,94 @@
                     autocomplate = "off" required />
                     <label for = "password1">CONFIRM PASSWORD</label>
                 </div>
+                <br>
+
+
+
+                <div class="int-area">
+                    <input type="button" onclick="sample6_execDaumPostcode()" value="Zip Code (click)">
+                    <br>
+                    <input name = "postcode" type="text" id="postcode" placeholder="POSTCODE">
+                    <input name = "address" type="text" id="address" placeholder="ADDRESS"><br>
+                    <input name = "detailAddress" id="detailAddress" placeholder="DETAILADDRESS">
+                    <input name = "extraAddress" id="extraAddress" placeholder="EXTRAADDRESS">
+                </div>
+<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+<script>
+    function sample6_execDaumPostcode() {
+        new daum.Postcode({
+            oncomplete: function(data) {
+                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+
+                // 각 주소의 노출 규칙에 따라 주소를 조합한다.
+                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                var addr = ''; // 주소 변수
+                var extraAddr = ''; // 참고항목 변수
+
+                //사용자가 선택한 주소 타입에 따라 해당 주소 값을 가져온다.
+                if (data.userSelectedType === 'R') { // 사용자가 도로명 주소를 선택했을 경우
+                    addr = data.roadAddress;
+                } else { // 사용자가 지번 주소를 선택했을 경우(J)
+                    addr = data.jibunAddress;
+                }
+
+                // 사용자가 선택한 주소가 도로명 타입일때 참고항목을 조합한다.
+                if(data.userSelectedType === 'R'){
+                    // 법정동명이 있을 경우 추가한다. (법정리는 제외)
+                    // 법정동의 경우 마지막 문자가 "동/로/가"로 끝난다.
+                    if(data.bname !== '' && /[동|로|가]$/g.test(data.bname)){
+                        extraAddr += data.bname;
+                    }
+                    // 건물명이 있고, 공동주택일 경우 추가한다.
+                    if(data.buildingName !== '' && data.apartment === 'Y'){
+                        extraAddr += (extraAddr !== '' ? ', ' + data.buildingName : data.buildingName);
+                    }
+                    // 표시할 참고항목이 있을 경우, 괄호까지 추가한 최종 문자열을 만든다.
+                    if(extraAddr !== ''){
+                        extraAddr = ' (' + extraAddr + ')';
+                    }
+                    // 조합된 참고항목을 해당 필드에 넣는다.
+                    document.getElementById("extraAddress").value = extraAddr;
+                
+                } else {
+                    document.getElementById("extraAddress").value = '';
+                }
+
+                // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                document.getElementById('postcode').value = data.zonecode;
+                document.getElementById("address").value = addr;
+                // 커서를 상세주소 필드로 이동한다.
+                document.getElementById("detailAddress").focus();
+            }
+        }).open();
+    }
+</script>
+                </div>
+
+
+
+
+                <div>
+                    <label for = "ale">ALLERGY</label> <br> 
+                    콩<input type="checkbox" name="test_list" value="1"> 
+                    땅콩<input type="checkbox" name="test_list" value="2"> 
+                    달걀<input type="checkbox" name="test_list" value="3"> 
+                    새우<input type="checkbox" name="test_list" value="4"> 
+                </div>
+
+                <br>
+                <div>
+                    Please enter an allergy that is not in the checkbox.
+                              <br> (If not, please enter None.)
+                </div>
+                <div class="int-area">
+                    <input name='ale' 
+                    type="text" 
+                    check_result="fail" 
+                    autocomplate = "off" required />
+                    <label for = "ale">ALLERGY</label>
+                </div>
+
                 <div class="btn-area">
                     <button id="btn" 
                     value="SIGN UP"
@@ -82,95 +170,3 @@
 
     </body>
 </html>
-
-
-
-{% comment %} <head>
-        
-    <title>Sign up</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'style1.css' %}">
-<html lang = "ko">
-<head>
-<meta charset="UTF-8">
-<title>Signup</title>
-<link rel = "stylesheet" href = "style1.css">
-<script src = "jquery-3.4.1.js"></script>
-</head>
-<body>
-<section class ="login-form">
-    <h1>EAT VILLAGE</h1>
-    <b><center>SIGN UP</center><b>
-    <form action = "">
-        <div class="int-area">
-            <input type="text" name = "userid" id= "userid"
-            autocomplate = "off" required>
-            <label for = "userid">ID</label>
-        </div>
-        <form action = "">
-            <div class="int-area">
-                <input type="text" name = "user_email" id= "user_email"
-                autocomplate = "off" required>
-                <label for = "user_email">EMAIL</label>
-        </div>
-        <form action = "">
-        <div class ="int-area">
-            <input type="password" name = "user_pw" id = "user_pw"
-            autocomplate = "off" required>
-            <label for="user_pw">PASSWORD</label>
-        </div>
-        <div class ="int-area">
-            <input type="password" name = "user_pw1" id = "user_pw1"
-            autocomplate = "off" required>
-            <label for="user_pw1">CONFIRM PASSWORD: </label>
-        </div>
-        <div style="margin:10px 0; padding:10px; background-color: #ddddd;">
-            [Terms]<br> 1. 약관입니다.
-        </div>
-        AGREEMENT   <input type="checkbox" id = "idcheck"/>
-        <div class="btn-area">
-            <button id="btn" onclick = "registerUser()"
-            type="submit">SIGN UP</button>
-        </div>
-    </form>
-</section>
-
-<script>
-    let id = $('#id');
-    let pw = $('#pw');
-    let btn = $('#btn');
-
-    $(btn).on('click', function(){
-        if($(id).val() =="") {
-            $(id).next('label').addClass('warning');
-            setTimeout(function() {
-                $('label').removeClass('warning');
-            },1500);
-        }
-        else if($(pw).val() == "") {
-            $(pw).next('label').addClass('warning');
-            setTimeout(function(){
-                $('label').removeClass('warning');
-            },1500);
-        }
-    });
-</script>
-</body>  {% endcomment %}
-
-
-
-
-
-
-
-
-
-
-
-
