--- a/stream/templates/index.html
+++ b/stream/templates/index.html
@@ -9,5 +9,21 @@
     <body>
         <h1>hello~!</h1>
         <img src="{% url 'video_feed' %}" alt="">yolov5 </img>
+        <video id="gum-local" autoplay playsinline></video>
+        <button id="showVideo">Open camera</button>
+        
+        <div id="errorMsg"></div>
+        <p class="warning"><strong>Warning:</strong> if you're not using headphones, pressing play will cause feedback.</p>
+        <p>Display the video stream from <code>getUserMedia()</code> in a video element.</p>
+        <p>The 
+            <code>MediaStream</code> object 
+            <code>stream</code> passed to the 
+            <code>getUserMedia()</code> 
+            callback is in global scope, so you can inspect it from the console.
+        </p>
+
+        <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+        <script src="main.js" async></script>
+        <script src="ga.js"></script>
     </body>
 </html>
