--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -71,53 +71,51 @@
                     autocomplate = "off" required />
                     <label for = "password1">CONFIRM PASSWORD</label>
                 </div>
-                <br>
+
 
 
 
                 <div class="int-area">
-                    <input type="button" onclick="sample6_execDaumPostcode()" value="Zip Code (click)">
-                    <br>
-                    <input name = "postcode" type="text" id="postcode" placeholder="POSTCODE">
-                    <input name = "address" type="text" id="address" placeholder="ADDRESS"><br>
-
-                </div>
-<script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
-<script>
-    function sample6_execDaumPostcode() {
-        new daum.Postcode({
-            oncomplete: function(data) {
-                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
-                console.log(data);
-                                  
-                // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
-                // 도로명 주소의 노출 규칙에 따라 주소를 표시한다.
-                // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
-                var roadAddr = data.roadAddress; // 도로명 주소 변수
-                var jibunAddr = data.jibunAddress; // 지번 주소 변수
-                // 우편번호와 주소 정보를 해당 필드에 넣는다.
-                document.getElementById('postcode').value = data.zonecode;
-                if(roadAddr !== ''){
-                    document.getElementById("address").value = roadAddr;
-                } 
-                else if(jibunAddr !== ''){
-                    document.getElementById("address").value = jibunAddr;
-                }
-            }
-        }).open();
-    }
-</script>
-                </div>
+                    <input type="button" onclick="sample6_execDaumPostcode()" check_result="fail" value="Zip Code (click)" autocomplate = "off" required />
+                    <input name = "postcode" type="text" id="postcode" placeholder="POSTCODE"  autocomplate = "off" required />
+                    <input name = "address" type="text" id="address" placeholder="ADDRESS"  autocomplate = "off" required /><br>
+                    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
+                    <script>
+                        function sample6_execDaumPostcode() {
+                            new daum.Postcode({
+                                oncomplete: function(data) {
+                                    // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+                                    console.log(data);
+                                                    
+                                    // 팝업에서 검색결과 항목을 클릭했을때 실행할 코드를 작성하는 부분.
+                                    // 도로명 주소의 노출 규칙에 따라 주소를 표시한다.
+                                    // 내려오는 변수가 값이 없는 경우엔 공백('')값을 가지므로, 이를 참고하여 분기 한다.
+                                    var roadAddr = data.roadAddress; // 도로명 주소 변수
+                                    var jibunAddr = data.jibunAddress; // 지번 주소 변수
+                                    // 우편번호와 주소 정보를 해당 필드에 넣는다.
+                                    document.getElementById('postcode').value = data.zonecode;
+                                    if(jibunAddr !== ''){
+                                        document.getElementById("address").value = jibunAddr;
+                                    } 
+                                    else if(roadAddr !== ''){
+                                        document.getElementById("address").value = roadAddr;
+                                    }
+                                }
+                            }).open();
+                        }
+                    </script>
+                    </div>
 
 
 
 
                 <div>
                     <label for = "ale">ALLERGY</label> <br> 
-                    콩<input type="checkbox" name="test_list" value="1"> 
-                    땅콩<input type="checkbox" name="test_list" value="2"> 
-                    달걀<input type="checkbox" name="test_list" value="3"> 
-                    새우<input type="checkbox" name="test_list" value="4"> 
+                    <input type="checkbox" name="test_list" value="달걀">달걀 
+                    <input type="checkbox" name="test_list" value="우유">우유 
+                    <input type="checkbox" name="test_list" value="견과류">견과류
+                    <input type="checkbox" name="test_list" value="생선">생선 
+                    <input type="checkbox" name="test_list" value="새우">갑각류(새우,게,랍스터) 
                 </div>
 
                 <br>
