--- a/communityboard/templates/communityboard/communityboard_create.html
+++ b/communityboard/templates/communityboard/communityboard_create.html
@@ -1,4 +1,4 @@
-<br><a href="{% url 'recipeboard:recipeboard_index' %}">목록으로돌아가기</a>
+<br><a href="{% url 'communityboard:communityboard_index' %}">목록으로돌아가기</a>
 
 {% block content %}
 <div class="container">
@@ -7,7 +7,7 @@
         <table>
 
             {{ form.as_table }}
-
+            
             {{ formset.management_form }}
             {% for form in formset %}
                 {{ form }}
